MTAP-6954 fixed build issue