@@ -185,7 +185,7 @@ class CalculateFinelineBuyQuantityTest {
        when(strategyFetchService.getAllCcSizeProfiles(any())).thenReturn(buyQtyResponse);
        when(strategyFetchService.getAPRunFixtureAllocationOutput(any())).thenReturn(rfaResponse);
        when(deptAdminRuleService.getInitialThreshold(anyLong(), anyInt())).thenReturn(2);
-       when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+       when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
        CalculateBuyQtyRequest request = create("store", 50000, 34, 1488, 9071, 7205, 1500, 12L);
        CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -228,7 +228,7 @@ class CalculateFinelineBuyQuantityTest {
         when(bqfpService.getBuyQuantityUnits(any())).thenReturn(bqfpResponse);
         when(strategyFetchService.getAllCcSizeProfiles(any())).thenReturn(buyQtyResponse);
         when(strategyFetchService.getAPRunFixtureAllocationOutput(any())).thenReturn(rfaResponse);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 34, 1488, 9074, 7207, 4440, 12L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -259,7 +259,7 @@ class CalculateFinelineBuyQuantityTest {
         when(bqfpService.getBuyQuantityUnits(any())).thenReturn(bqfpResponse);
         when(strategyFetchService.getAllCcSizeProfiles(any())).thenReturn(buyQtyResponse);
         when(strategyFetchService.getAPRunFixtureAllocationOutput(any())).thenReturn(rfaResponse);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 34, 1488, 9074, 7207, 4440, 12L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -314,7 +314,7 @@ class CalculateFinelineBuyQuantityTest {
         when(strategyFetchService.getAPRunFixtureAllocationOutput(any())).thenReturn(rfaResponse);
         when(strategyFetchService.getStrategyVolumeDeviation(anyLong(), anyInt())).thenReturn(strategyVolumeDeviationResponse);
         when(deptAdminRuleService.getInitialThreshold(anyLong(), anyInt())).thenReturn(2);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 34, 1488, 9071, 7205, 1500, 12L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -337,7 +337,7 @@ class CalculateFinelineBuyQuantityTest {
         when(strategyFetchService.getAllCcSizeProfiles(any())).thenReturn(buyQtyResponse);
         when(strategyFetchService.getAPRunFixtureAllocationOutput(any())).thenReturn(rfaResponse);
         when(strategyFetchService.getStrategyVolumeDeviation(anyLong(), anyInt())).thenReturn(strategyVolumeDeviationResponse);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 34, 1488, 9071, 7205, 1500, 12L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -361,7 +361,7 @@ class CalculateFinelineBuyQuantityTest {
         when(strategyFetchService.getAPRunFixtureAllocationOutput(any())).thenReturn(rfaResponse);
         when(strategyFetchService.getStrategyVolumeDeviation(anyLong(), anyInt())).thenReturn(strategyVolumeDeviationResponse);
         when(deptAdminRuleService.getInitialThreshold(anyLong(), anyInt())).thenReturn(2);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 34, 1488, 9071, 7205, 1500, 12L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -383,7 +383,7 @@ class CalculateFinelineBuyQuantityTest {
         when(strategyFetchService.getAllCcSizeProfiles(any())).thenReturn(buyQtyResponse);
         when(strategyFetchService.getAPRunFixtureAllocationOutput(any())).thenReturn(rfaResponse);
         when(deptAdminRuleService.getInitialThreshold(anyLong(), anyInt())).thenReturn(2);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 34, 6420, 12238, 31526, 5414, 236L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -539,7 +539,7 @@ class CalculateFinelineBuyQuantityTest {
         when(bqfpService.getBuyQuantityUnits(any())).thenReturn(bqfpResponse);
         when(strategyFetchService.getAllCcSizeProfiles(any())).thenReturn(buyQtyResponse);
         when(strategyFetchService.getAPRunFixtureAllocationOutput(any())).thenReturn(rfaResponse);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 23, 3669, 8244, 16906, 250, 12L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -557,8 +557,8 @@ class CalculateFinelineBuyQuantityTest {
         assertEquals(4, spCustomerChoiceChannelFixtureSizeList.size());
         assertEquals(64, spCustomerChoiceChannelFixtureSizeList.stream().flatMap(Collection::stream).count());
         assertEquals(4, spCustomerChoiceChannelFixtureSizeList.stream().flatMap(Collection::stream).filter(val -> val.getAhsSizeDesc().equals("33X30")).count());
-        assertEquals(3, spCustomerChoiceChannelFixtureSizeList.stream().flatMap(Collection::stream).filter(val -> val.getAhsSizeDesc().equals("33X30")).map(SpCustomerChoiceChannelFixtureSize::getMessageObj).filter(Objects::nonNull).filter(val -> val.equals("{\"codes\":[210,211]}")).count());
-        assertEquals(1, spCustomerChoiceChannelFixtureSizeList.stream().flatMap(Collection::stream).filter(val -> val.getAhsSizeDesc().equals("33X30")).map(SpCustomerChoiceChannelFixtureSize::getMessageObj).filter(Objects::nonNull).filter(val -> val.equals("{\"codes\":[]}")).count());
+        assertEquals(2, spCustomerChoiceChannelFixtureSizeList.stream().flatMap(Collection::stream).filter(val -> val.getAhsSizeDesc().equals("33X30")).map(SpCustomerChoiceChannelFixtureSize::getMessageObj).filter(Objects::nonNull).filter(val -> val.equals("{\"codes\":[210,211]}")).count());
+        assertEquals(2, spCustomerChoiceChannelFixtureSizeList.stream().flatMap(Collection::stream).filter(val -> val.getAhsSizeDesc().equals("33X30")).map(SpCustomerChoiceChannelFixtureSize::getMessageObj).filter(Objects::nonNull).filter(val -> val.equals("{\"codes\":[]}")).count());
 
         SpCustomerChoiceChannelFixture fixture1 = response.getSpFineLineChannelFixtures()
                                                 .stream()
@@ -618,7 +618,7 @@ class CalculateFinelineBuyQuantityTest {
         when(strategyFetchService.getAllCcSizeProfiles(any())).thenReturn(buyQtyResponse);
         when(strategyFetchService.getAPRunFixtureAllocationOutput(any())).thenReturn(rfaResponse);
         when(deptAdminRuleService.getInitialThreshold(anyLong(), anyInt())).thenReturn(2);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 34, 1488, 9071, 7205, 1500, 12L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -675,7 +675,7 @@ class CalculateFinelineBuyQuantityTest {
         when(strategyFetchService.getStrategyVolumeDeviation(anyLong(), anyInt())).thenReturn(strategyVolumeDeviationResponse);
         when(deptAdminRuleService.getInitialThreshold(anyLong(), anyInt())).thenReturn(2);
         when(deptAdminRuleService.getReplenishmentThreshold(anyLong(), anyInt())).thenReturn(500);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 34, 1488, 9074, 7207, 468, 69L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -723,7 +723,7 @@ class CalculateFinelineBuyQuantityTest {
         when(strategyFetchService.getStrategyVolumeDeviation(anyLong(), anyInt())).thenReturn(strategyVolumeDeviationResponse);
         when(deptAdminRuleService.getInitialThreshold(anyLong(), anyInt())).thenReturn(2);
         when(deptAdminRuleService.getReplenishmentThreshold(anyLong(), anyInt())).thenReturn(500);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 34, 6419, 12231, 31513, 5149, 62L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -769,7 +769,7 @@ class CalculateFinelineBuyQuantityTest {
         when(strategyFetchService.getStrategyVolumeDeviation(anyLong(), anyInt())).thenReturn(strategyVolumeDeviationResponse);
         when(deptAdminRuleService.getInitialThreshold(anyLong(), anyInt())).thenReturn(2);
         when(deptAdminRuleService.getReplenishmentThreshold(anyLong(), anyInt())).thenReturn(750);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 23, 3669, 8244, 16906, 3347, 133L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -815,7 +815,7 @@ class CalculateFinelineBuyQuantityTest {
         when(strategyFetchService.getStrategyVolumeDeviation(anyLong(), anyInt())).thenReturn(strategyVolumeDeviationResponse);
         when(deptAdminRuleService.getInitialThreshold(anyLong(), anyInt())).thenReturn(2);
         when(deptAdminRuleService.getReplenishmentThreshold(anyLong(), anyInt())).thenReturn(2500);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 34, 6419, 12228, 31507, 2810, 73L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
@@ -865,7 +865,7 @@ class CalculateFinelineBuyQuantityTest {
         when(strategyFetchService.getStrategyVolumeDeviation(anyLong(), anyInt())).thenReturn(strategyVolumeDeviationResponse);
         when(deptAdminRuleService.getInitialThreshold(anyLong(), anyInt())).thenReturn(2);
         when(deptAdminRuleService.getReplenishmentThreshold(anyLong(), anyInt())).thenReturn(500);
-        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(Set.of(100,200)).build());
+        when(validationService.validateCalculateBuyQuantityInputData(any(List.class), any(APResponse.class), any(BQFPResponse.class), any(StyleDto.class), any(CustomerChoiceDto.class))).thenReturn(ValidationResult.builder().codes(new HashSet<>(Arrays.asList(100,200))).build());
         CalculateBuyQtyRequest request = create("store", 50000, 23, 3669, 7506, 16887, 771, 123L);
         CalculateBuyQtyParallelRequest pRequest = createFromRequest(request);
 
